upload approval to assgin team

--- a/src/app/coreBusinessSystems/consultationsSystem/consultationAssignments/consul-deputy-new-consultations/consul-deputy-new-consultations.component.html
+++ b/src/app/coreBusinessSystems/consultationsSystem/consultationAssignments/consul-deputy-new-consultations/consul-deputy-new-consultations.component.html
@@ -37,6 +37,7 @@
             </div>
             <div class="ui-toolbar-group-right" *ngIf="rowData.taskDefinitionKey === 'Task_06'">
               <button pButton class="btn" label="Remarks" (click)="showConsultations(rowData)"></button>&nbsp; &nbsp;
+              <button pButton class="btn" label="show" (click)="showUploadPopup()"></button>&nbsp; &nbsp;
               <button pButton class="btn" label="Update123" (click)="showDialog(rowData)"></button>
             </div>
             <div class="ui-toolbar-group-right" *ngIf="rowData.taskDefinitionKey === 'Task_03'">
