--- a/src/app/coreBusinessSystems/consultationsSystem/consultationAssignments/consul-deputy-new-consultations/accept-reject-review/accept-reject-review.component.html
+++ b/src/app/coreBusinessSystems/consultationsSystem/consultationAssignments/consul-deputy-new-consultations/accept-reject-review/accept-reject-review.component.html
@@ -1,6 +1,4 @@
-<p-header>
-  header
-</p-header>
+
 <div class=" container">
   <div class="col-10">
     <label for="">Remark</label>
@@ -11,7 +9,7 @@
 </div>
 
 
-<p-footer>
+<div >
   <div class="container py-2  text-center">
    
       <button pButton type="button" class="ui-button-info" label="Accept" (click)="acceptRejectTask3(true)"></button>
@@ -21,4 +19,4 @@
     
     <br>
   </div>
-</p-footer>
+</div >
