--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -13,7 +13,7 @@
   overflow-x: hidden;
   overflow-y: scroll;
   position: relative;
-  overflow: hidden;
+  overflow: inherit;
 }
 .collapsed {
   margin-left: 60px;
