--- a/src/app/coreBusinessSystems/consultationsSystem/consultationAssignments/consul-deputy-new-consultations/accept-reject-review/accept-reject-review.component.html
+++ b/src/app/coreBusinessSystems/consultationsSystem/consultationAssignments/consul-deputy-new-consultations/accept-reject-review/accept-reject-review.component.html
@@ -15,7 +15,7 @@
       <button pButton type="button" class="ui-button-info" label="Accept" (click)="acceptRejectTask3(true)"></button>
       <button pButton type="button" class="ui-button-danger" label="Reject"
         (click)="acceptRejectTask3(false)"></button>
-      <button pButton type="button" class="ui-button-warning" (click)="closeDialog()" label="Cancel"></button>
+      <button pButton type="button" class="ui-button-warning" (click)="onReset()" label="Cancel"></button>
     
     <br>
   </div>
