--- a/src/app/coreBusinessSystems/consultationsSystem/consultationAssignments/consul-deputy-new-consultations/consul-deputy-new-consultations.component.html
+++ b/src/app/coreBusinessSystems/consultationsSystem/consultationAssignments/consul-deputy-new-consultations/consul-deputy-new-consultations.component.html
@@ -2,7 +2,8 @@
   <p-toast position="bottom-right"></p-toast>
   <div>
     <p-table #dt [columns]="cols" [value]="allConsultationsData" [responsive]="true" dataKey="constId"
-      rowExpandMode="single" selectionMode="single" [(selection)]="selectedConsData">
+             rowExpandMode="single" selectionMode="single" [(selection)]="selectedConsData" [paginator]="true"
+             [rows]="6">
       <ng-template pTemplate="caption">
         <h3> {{ 'ConsulHeader' | translate}}</h3>
       </ng-template>
@@ -13,37 +14,45 @@
             {{col.header}}
           </th>
         </tr>
+        <tr>
+          <th style="width: 3em;"></th>
+          <th *ngFor="let col of columns" [ngSwitch]="col.field">
+            <input *ngSwitchCase="'constTitle'" pInputText type="text"
+                   (input)="dt.filter($event.target.value, col.field, col.filterMatchMode)">
+            <input *ngSwitchCase="'constDescription'" pInputText type="text"
+                   (input)="dt.filter($event.target.value, col.field, col.filterMatchMode)">
+            <p-dropdown *ngSwitchCase="'taskDefinitionAName'" [options]="taskDefinitionFilter"
+                        [style]="{'width':'100%'}"
+                        (onChange)="dt.filter($event.value, col.field, 'equals')"></p-dropdown>
+            <p-dropdown *ngSwitchCase="'processDefinitionAName'" [options]="processDefinitionFilter"
+                        [style]="{'width':'100%'}"
+                        (onChange)="dt.filter($event.value, col.field, 'equals')"></p-dropdown>
+          </th>
+        </tr>
       </ng-template>
-      <ng-template pTemplate="body" let-rowData let-expanded="expanded" let-columns="columns">
-        <tr [pSelectableRow]="rowData">
-          <td>
-            <a href="#" [pRowToggler]="rowData">
-              <i [ngClass]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></i>
-            </a>
+      <ng-template pTemplate="body" let-rowData let-expanded="expanded" let-columns="columns" let-i="rowIndex">
+        <tr [pSelectableRow]="rowData" [pRowToggler]="rowData">
+          <td style="background-color: #ace1ac">
+            {{i + 1}}
           </td>
           <td *ngFor="let col of columns">
             <span class="ui-column-title">{{col.header}}</span>
-            {{rowData[col.field]}}
+            {{(col.field === 'plannedStartDate' || col.field === 'plannedEndDate') ? (rowData[col.field] | date: 'yyyy/MM/dd') : rowData[col.field]}}
           </td>
         </tr>
       </ng-template>
       <ng-template pTemplate="rowexpansion" let-rowData let-columns="columns">
         <tr style="background: #6495ed21">
           <td [attr.colspan]="columns.length + 1">
-            <!--            <p-toolbar>-->
-            <div class="ui-toolbar-group-right" *ngIf="rowData.taskDefinitionKey === 'Task_07'">
+            <div class="ui-toolbar-group-right">
+              <button pButton class="btn" icon="pi pi-eye" pTooltip="View Workflow" (click)="showBpmnWorkflow(rowData)"></button>&nbsp;
               <button pButton class="btn" label="Remarks" (click)="showConsultations(rowData)"></button>&nbsp;
-              <button pButton class="btn" label="Update321" (click)="showDialog(rowData)"></button>
+              <button pButton class="btn" label="Update task 7" (click)="showDialog(rowData)" *ngIf="rowData.taskDefinitionKey == 'Task_07'"></button>&nbsp;
+              <button pButton class="btn" label="Update task 6" (click)="showUploadPopup(rowData)" *ngIf="rowData.taskDefinitionKey == 'Task_06'"></button>&nbsp;
+              <!-- <button pButton class="btn" label="Update123" (click)="showDialog(rowData)" *ngIf="rowData.taskDefinitionKey == 'Task_06'"></button> -->
+              <button pButton class="btn" label="Update task 3" (click)="showDialog(rowData)" *ngIf="rowData.taskDefinitionKey == 'Task_03'"></button>&nbsp;
             </div>
-            <div class="ui-toolbar-group-right" *ngIf="rowData.taskDefinitionKey === 'Task_06'">
-              <button pButton class="btn" label="Remarks" (click)="showConsultations(rowData)"></button>&nbsp; &nbsp;
-              <button pButton class="btn" label="show" (click)="showUploadPopup()"></button>&nbsp; &nbsp;
-              <button pButton class="btn" label="Update123" (click)="showDialog(rowData)"></button>
-            </div>
-            <div class="ui-toolbar-group-right" *ngIf="rowData.taskDefinitionKey === 'Task_03'">
-              <button pButton class="btn" label="Remarks" (click)="showConsultations(rowData)"></button>&nbsp; &nbsp;
-              <button pButton class="btn" label="Update000" (click)="showDialog(rowData)"></button>
-            </div>
+            
 
           </td>
         </tr>
@@ -56,29 +65,29 @@
 </app-consultation-full-details>
 
 <!--popup dailog "accept/reject"-->
-<p-dialog [(visible)]="display" [modal]="true">
-  <p-header>
-    header
-  </p-header>
-  <div class=" container">
-    <div class="col-10">
-      <label for="">Remark</label>
-    </div>
-    <div class="col-10">
-      <textarea [(ngModel)]="remark" pInputTextarea placeholder="Remark" [rows]="6" [cols]="40"></textarea>
-    </div>
-  </div>
+<!--<p-dialog [(visible)]="display" [modal]="true">-->
+<!--  <p-header>-->
+<!--    header-->
+<!--  </p-header>-->
+<!--  <div class=" container">-->
+<!--    <div class="col-10">-->
+<!--      <label for="">Remark</label>-->
+<!--    </div>-->
+<!--    <div class="col-10">-->
+<!--      <textarea [(ngModel)]="remark" pInputTextarea placeholder="Remark" [rows]="6" [cols]="40"></textarea>-->
+<!--    </div>-->
+<!--  </div>-->
 
 
-  <p-footer>
-    <div class="container py-2  text-center">
-     
-        <button pButton type="button" class="ui-button-info" label="Accept" (click)="acceptRejectTask3(true)"></button>
-        <button pButton type="button" class="ui-button-danger" label="Reject"
-          (click)="acceptRejectTask3(false)"></button>
-        <button pButton type="button" class="ui-button-warning" (click)="closeDialog()" label="Cancel"></button>
-      
-      <br>
-    </div>
-  </p-footer>
-</p-dialog>
+<!--  <p-footer>-->
+<!--    <div class="container py-2  text-center">-->
+
+<!--      <button pButton type="button" class="ui-button-info" label="Accept" (click)="acceptRejectTask3(true)"></button>-->
+<!--      <button pButton type="button" class="ui-button-danger" label="Reject"-->
+<!--              (click)="acceptRejectTask3(false)"></button>-->
+<!--      <button pButton type="button" class="ui-button-warning" (click)="closeDialog()" label="Cancel"></button>-->
+
+<!--      <br>-->
+<!--    </div>-->
+<!--  </p-footer>-->
+<!--</p-dialog>-->
