--- a/src/app/coreBusinessSystems/consultationsSystem/rfcsSubSystem/deputyNewRfcs/deputy-new-rfcs.component.html
+++ b/src/app/coreBusinessSystems/consultationsSystem/rfcsSubSystem/deputyNewRfcs/deputy-new-rfcs.component.html
@@ -2,7 +2,8 @@
   <p-toast position="bottom-right"></p-toast>
   <div>
     <p-table #dt [columns]="cols" [value]="allDeputyRfcs" [responsive]="true" dataKey="rfcId"
-             rowExpandMode="single" selectionMode="single" [(selection)]="selectedRfc">
+             rowExpandMode="single" selectionMode="single" [(selection)]="selectedRfc" [paginator]="true"
+             [rows]="6">
       <ng-template pTemplate="caption">
         List of Consultations
       </ng-template>
@@ -12,27 +13,31 @@
           <th *ngFor="let col of columns">
             {{col.header}}
           </th>
-<!--          <th style="width: 10em"></th>-->
-<!--          <th style="width: 7em"></th>-->
+        </tr>
+        <tr>
+          <th style="width: 3em;"></th>
+          <th *ngFor="let col of columns" [ngSwitch]="col.field">
+            <input *ngSwitchCase="'rfcTitle'" pInputText type="text"
+                   (input)="dt.filter($event.target.value, col.field, col.filterMatchMode)">
+            <input *ngSwitchCase="'fieldArabicDescription'" pInputText type="text"
+                   (input)="dt.filter($event.target.value, col.field, col.filterMatchMode)">
+            <input *ngSwitchCase="'orgArabicName'" pInputText type="text"
+                   (input)="dt.filter($event.target.value, col.field, col.filterMatchMode)">
+            <p-dropdown *ngSwitchCase="'taskDefinitionAName'" [options]="taskDefinitionFilter"
+                        [style]="{'width':'100%'}"
+                        (onChange)="dt.filter($event.value, col.field, 'equals')"></p-dropdown>
+          </th>
         </tr>
       </ng-template>
-      <ng-template pTemplate="body" let-rowData let-expanded="expanded" let-columns="columns">
-        <tr [pSelectableRow]="rowData">
-          <td>
-            <a href="#" [pRowToggler]="rowData">
-              <i [ngClass]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></i>
-            </a>
+      <ng-template pTemplate="body" let-rowData let-expanded="expanded" let-columns="columns"  let-i="rowIndex">
+        <tr [pSelectableRow]="rowData" [pRowToggler]="rowData">
+          <td style="background-color: #ace1ac">
+            {{i + 1}}
           </td>
           <td *ngFor="let col of columns">
             <span class="ui-column-title">{{col.header}}</span>
             {{rowData[col.field]}}
           </td>
-<!--          <td align="center">-->
-<!--            <button pButton class="btn" label="Remarks" (click)="showRemarks(rowData)"></button>-->
-<!--          </td>-->
-<!--          <td>-->
-<!--            <button pButton class="btn" label="Update" (click)="updateRfcReviewDeputy(rowData)"></button>-->
-<!--          </td>-->
         </tr>
       </ng-template>
       <ng-template pTemplate="rowexpansion" let-rowData let-columns="columns">
@@ -40,23 +45,18 @@
           <td [attr.colspan]="columns.length + 1">
             <!--            <p-toolbar>-->
             <div class="ui-toolbar-group-right" *ngIf="rowData.taskDefinitionKey === 'Task_02'">
-              <button pButton class="btn" label="Remarks" (click)="showRemarks(rowData)"></button>&nbsp;
-              <button pButton class="btn" label="Update" (click)="updateRfcReviewDeputy(rowData)"></button>
+              <button pButton icon="pi pi-eye" pTooltip="View Workflow" (click)="showBpmnWorkflow(rowData)"></button>&nbsp;
+              <button pButton class="btn" label="{{ 'Details' | translate}}" (click)="showRemarks(rowData)"></button>&nbsp;
+              <button pButton class="btn" label="{{ 'Process' | translate}}" (click)="updateRfcReviewDeputy(rowData)"></button>
             </div>
             <div class="ui-toolbar-group-right" *ngIf="rowData.taskDefinitionKey === 'Task_07'">
-              <button pButton class="btn" label="Remarks" (click)="showRemarks(rowData)"></button>&nbsp;            &nbsp;
-              <button pButton class="btn" label="Update" (click)="updateReviewAfterGMReview(rowData)"></button>
+              <button pButton icon="pi pi-eye" pTooltip="View Workflow" (click)="showBpmnWorkflow(rowData)"></button>&nbsp;
+              <button pButton class="btn" label="{{ 'Details' | translate}}" (click)="showRemarks(rowData)"></button>&nbsp;            &nbsp;
+              <button pButton class="btn" label="{{ 'Approve' | translate}}" (click)="updateReviewAfterGMReview(rowData)"></button>
             </div>
           </td>
         </tr>
       </ng-template>
-<!--      <ng-template pTemplate="summary">-->
-<!--        There are {{allDeputyRfcs?.length}} consultations-->
-<!--        <div style="text-align: left">-->
-<!--          Selected-->
-<!--          Consultation: {{selectedRfc ? selectedRfc.rfcDescription + ' - ' + selectedRfc.orgContactName : 'none'}}-->
-<!--        </div>-->
-<!--      </ng-template>-->
     </p-table>
   </div>
 </div>
