--- a/src/app/coreBusinessSystems/consultationsSystem/rfcsSubSystem/spec-dept-and-comm-rfcs/spec-dept-and-comm-rfcs.component.html
+++ b/src/app/coreBusinessSystems/consultationsSystem/rfcsSubSystem/spec-dept-and-comm-rfcs/spec-dept-and-comm-rfcs.component.html
@@ -1,7 +1,8 @@
 <div style="margin: 5px" class="row">
   <p-toast position="bottom-right"></p-toast>
   <p-table #dt [columns]="cols" [value]="allSpecDeptRfcs" [responsive]="true" dataKey="rfcId"
-           rowExpandMode="single" selectionMode="single" [(selection)]="selectedRfc">
+           rowExpandMode="single" selectionMode="single" [(selection)]="selectedRfc"  [paginator]="true"
+           [rows]="6">
     <ng-template pTemplate="caption">
       <h3> {{ 'ConsulHeader' | translate}}</h3>
     </ng-template>
@@ -11,23 +12,31 @@
         <th *ngFor="let col of columns">
           {{col.header}}
         </th>
-        <!--          <th style="width: 7em"></th>-->
+      </tr>
+      <tr>
+        <th style="width: 3em;"></th>
+        <th *ngFor="let col of columns" [ngSwitch]="col.field">
+          <input *ngSwitchCase="'rfcTitle'" pInputText type="text"
+                 (input)="dt.filter($event.target.value, col.field, col.filterMatchMode)">
+          <input *ngSwitchCase="'fieldArabicDescription'" pInputText type="text"
+                 (input)="dt.filter($event.target.value, col.field, col.filterMatchMode)">
+          <input *ngSwitchCase="'orgArabicName'" pInputText type="text"
+                 (input)="dt.filter($event.target.value, col.field, col.filterMatchMode)">
+          <p-dropdown *ngSwitchCase="'taskDefinitionAName'" [options]="taskDefinitionFilter"
+                      [style]="{'width':'100%'}"
+                      (onChange)="dt.filter($event.value, col.field, 'equals')"></p-dropdown>
+        </th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-rowData let-expanded="expanded" let-columns="columns">
-      <tr [pSelectableRow]="rowData">
-        <td>
-          <a href="#" [pRowToggler]="rowData">
-            <i [ngClass]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></i>
-          </a>
+    <ng-template pTemplate="body" let-rowData let-expanded="expanded" let-columns="columns" let-i="rowIndex">
+      <tr [pSelectableRow]="rowData" [pRowToggler]="rowData">
+        <td style="background-color: #ace1ac">
+          {{i + 1}}
         </td>
         <td *ngFor="let col of columns">
           <span class="ui-column-title">{{col.header}}</span>
           {{rowData[col.field]}}
         </td>
-        <!--          <td>-->
-        <!--            <button pButton class="btn" label="Update" (click)="updateNeedStudyAndBussCenter(rowData)"></button>-->
-        <!--          </td>-->
       </tr>
     </ng-template>
     <ng-template pTemplate="rowexpansion" let-rowData let-columns="columns">
@@ -35,18 +44,16 @@
         <td [attr.colspan]="columns.length + 1">
           <!--            <p-toolbar>-->
           <div class="ui-toolbar-group-right" *ngIf="rowData.taskDefinitionKey === 'Task_04'">
-            <button pButton class="btn" label="Remarks" (click)="showRemarks(rowData)"></button>&nbsp;
-            &nbsp;
-            <button pButton class="btn" label="Assign" (click)="assignRfcToEmployee(rowData)"></button>
-            &nbsp;
-            <button pButton class="btn" label="Review" (click)="updateSpecEmplRfcReview(rowData)"></button>
+            <button pButton icon="pi pi-eye" pTooltip="View Workflow" (click)="showBpmnWorkflow(rowData)"></button>&nbsp;
+            <button pButton class="btn" label="{{ 'Details' | translate}}" (click)="showRemarks(rowData)"></button>&nbsp;            &nbsp;
+            <button pButton class="btn" label="{{ 'Assign' | translate}}" (click)="assignRfcToEmployee(rowData)"></button>            &nbsp;
+            <button pButton class="btn" label="{{ 'Process' | translate}}" (click)="updateSpecEmplRfcReview(rowData)"></button>
           </div>
           <div class="ui-toolbar-group-right" *ngIf="rowData.taskDefinitionKey === 'Task_05'">
-            <button pButton class="btn" label="Remarks" (click)="showRemarks(rowData)"></button>&nbsp; &nbsp;
-              &nbsp;
-            <button pButton class="btn" label="Manual" (click)="rfcManualProcess(rowData)"></button>
-            &nbsp;&nbsp;&nbsp;
-            <button pButton class="btn" label="Automatic" (click)="rfcAutomaticProcess(rowData)"></button>
+            <button pButton icon="pi pi-eye" pTooltip="View Workflow" (click)="showBpmnWorkflow(rowData)"></button>&nbsp;
+            <button pButton class="btn" label="{{ 'Details' | translate}}" (click)="showRemarks(rowData)"></button>              &nbsp;
+            <button pButton class="btn" label="{{ 'CComiteeM' | translate}}" (click)="rfcManualProcess(rowData)"></button>            &nbsp;&nbsp;&nbsp;
+            <button pButton class="btn" label="{{ 'CComiteeA' | translate}}" (click)="rfcAutomaticProcess(rowData)"></button>
           </div>
         </td>
       </tr>
