--- a/src/app/coreBusinessSystems/consultationsSystem/consultationAssignments/spec-dept-new-consultations/add-new-member/add-new-member.component.html
+++ b/src/app/coreBusinessSystems/consultationsSystem/consultationAssignments/spec-dept-new-consultations/add-new-member/add-new-member.component.html
@@ -12,11 +12,11 @@
               (click)="searchEmployee()"></button>
     </div>
     &nbsp;
+    <div class="ui-grid-col-9">
+      <span style="margin-left: 5px; font-size: 25px"> {{ employeeFullName }} </span>
+    </div>
   </div>
   <div>
-    <div class="ui-grid-col-10">
-      <h2> {{ employeeFullName }} </h2>
-    </div>
     <br/>
     &nbsp;<p-dropdown [options]="allTeamRoles" [(ngModel)]="selected" placeholder="Select"
                       optionLabel="teamRoleAName"
